--- a/.github/workflows/file-sync.yml
+++ b/.github/workflows/file-sync.yml
@@ -17,5 +17,5 @@ jobs:
           REPOSITORIES: |
             boyroid/destination@main
           FILES: |
-            sync-testing/files/folder1=sync-testing/files/folder1
+            sync-testing/files/folder1/file1.txt=sync-testing/files/folder1/file1.txt
           TOKEN: ${{ secrets.ACTIONS }}
