--- a/.github/workflows/file-sync.yml
+++ b/.github/workflows/file-sync.yml
@@ -17,5 +17,5 @@ jobs:
           REPOSITORIES: |
             boyroid/destination@main
           FILES: |
-            sync-testing
+            sync-testing/=sync-testing-after/
           TOKEN: ${{ secrets.ACTIONS }}
