--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -1,3 +1,7 @@
 boyroid/source:
   - source: 'sync-testing/files'
     dest: 'sync-testing/files'
+
+boyroid/destination:
+  - source: 'sync-testing/files'
+    dest: 'sync-testing/files'
