--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -1,6 +1,8 @@
 boyroid/source:
   - source: 'sync-testing/files'
     dest: 'sync-testing/files'
+    exclude: |
+      file4.txt
 
 boyroid/destination:
   - source: 'sync-testing/files'
