--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -1,8 +1,7 @@
 boyroid/source:
   - source: 'sync-testing/files'
     dest: 'sync-testing/files'
-    exclude: |
-      sync-testing/files/folder3/file4.txt
+    exclude: 'sync-testing/files/folder3/file4.txt'
 
 boyroid/destination:
   - source: 'sync-testing/files'
