--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -1,8 +1,9 @@
 boyroid/source:
-  - source: 'sync-testing/files'
-    dest: 'sync-testing/files'
+  - source: 'sync-testing/files/'
+    dest: 'sync-testing/files/'
     exclude: 'folder3/file4.txt'
 
 boyroid/destination:
-  - source: 'sync-testing/files'
-    dest: 'sync-testing/files'
+  - source: 'sync-testing/files/'
+    dest: 'sync-testing/files/'
+    exclude: 'folder3/file4.txt'
